--- a/backend/web/css/site.css
+++ b/backend/web/css/site.css
@@ -127,6 +127,7 @@ a.desc:after {
     width: 200px;
     height: 200px;
     overflow: hidden;
+    object-fit: cover;
     border-radius: 50%;
   }
   .mb-4 {
