--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -289,9 +289,11 @@ input[type="checkbox"]:checked {
   border-radius: 4% !important;
   background-color: #28a745;
   overflow: hidden;
-
+  object-fit: cover;
+  min-width: 250px;
+  min-height: 250px;
   max-width: 250px;
-  max-height: 300px;
+  max-height: 250px;
   margin-top: 5%;
   width: 100%;
   height: 100%;
@@ -301,8 +303,11 @@ input[type="checkbox"]:checked {
   border-radius: 4% !important;
   background-color: #dc3545;
   overflow: hidden;
+  object-fit: cover;
+  min-width: 250px;
+  min-height: 250px;
   max-width: 250px;
-  max-height: 300px;
+  max-height: 250px;
   margin-top: 5%;
 }
 
@@ -427,21 +432,4 @@ hr {
 }
 .border-red {
   border: 2px solid #dc3545;
-}
-.contact-info:focus ~ .basic-information-text {
- 
-  display: none;
-}
-.basic-information:not(focus) ~ .contact-info-text {
-  display: unset;
-  
-}
-.basic-information:focus ~ .contact-info-text {
-  display: none;
-}
-.visibleDltBtn {
-  display: block !important;
-}
-.hiddenDltBtn {
-  display: none;
 }
