--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -433,3 +433,12 @@ hr {
 .border-red {
   border: 2px solid #dc3545;
 }
+.lectures .bg-success, .bg-danger {
+padding: 6px;
+border-radius: 4px;
+}
+.infos {
+  padding: 2px; 
+  border-radius: 4px;
+  font-style: normal;
+}
